2007-06-28  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_init): patch from Sunil Mohan Adapa
	<sunilmohan@gnu.org.in> to not mark the video widget as having
	no backing window (Helps: #354181)
	* src/totem-private.h:
	* src/totem.c: (main): Remove unused ->fsvolume widget

2007-06-28  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (cb_vol),
	(totem_embedded_construct), (totem_volume_create):
	* configure.in:
	* data/totem.glade:
	* src/Makefile.am:
	* src/bacon-volume.c:
	* src/bacon-volume.h:
	* src/totem-private.h:
	* src/totem.c: (totem_action_set_mrl_with_warning),
	(update_volume_sliders), (volume_button_value_changed),
	(popup_hide), (totem_callback_connect), (totem_volume_create),
	(main): Remove the BaconVolume widget, and use the GtkVolumeButton
	in the new GTK+ instead, use the scale button in fullscreen mode as
	well, make both volume buttons share the same GtkAdjustment,
	modified version of patch from Jan Arne Petersen <jpetersen@jpetersen.org>
	(Helps: #450635)

2007-06-28  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (totem_action_add_recent): fix valgrind error
	with a not-fully initialised GtkRecentData
	* src/totem.c: (window_state_event_cb): fix tests when more than
	one flag has changed

2007-06-27  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/totem-menu.c: (totem_setup_recent):
	* src/totem-open-location.c: (totem_open_location_new): Convert to
	using gtk_recent_manager_get_default, as the per-screen constructor
	is now deprecated. (Closes: #449225)

2007-06-23  Gabor Kelemen  <kelemeng@gnome.hu>

	* src/totem.c: Use g_option_context_set_translation_domain to translate 
	program description in --help output. (Closes: #450167) 

2007-06-21  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* src/totem-menu.c: (show_controls_action_callback):
	* src/totem-options.c: (totem_options_process_late),
	(totem_options_process_early):